# team-d-backend

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  package.json  tsconfig.json
analyzer/drivers/: daemon.cpp  demo.cpp  mapgen.cpp  read-map.cpp
analyzer/drivers/tests/: graph.cpp
analyzer/lib/: Graph.h  Graph.hpp  Vector3D.cpp  Vector3D.h
analyzer/lib/algo/: dijkstra.h  dijkstra.hpp  exceptions.cpp  exceptions.h  fw.cpp  fw.h  fw.hpp  routing.cpp  routing.h  routing.hpp
analyzer/lib/math/: Vector3D.cpp  Vector3D.h  aviation.cpp  aviation.h  geospatial.cpp  geospatial.h
analyzer/lib/utils/: Graph.h  Graph.hpp  JSONStruct.h  JSONStruct.hpp  Node.h  bench.cpp  bench.h  bench.hpp  concepts.h  rand.h  rand.hpp  syncio.cpp  syncio.h  syncio.hpp
prisma/: schema.prisma
prisma/migrations/20250227011552_initial_schema/: migration.sql
prisma/migrations/20250314212317_unique_invite_token/: migration.sql
prisma/migrations/20250505143257_route_history/: migration.sql
prisma/migrations/20250506225537_routing_timestamps/: migration.sql
scripts/: fuel.js  mapgen-planes.js  planes.js
src/: app.controller.ts  app.module.ts  main.ts
src/asset/: asset.controller.ts  asset.dtos.ts  asset.module.ts  asset.service.ts
src/assets/: assets.controller.ts  assets.dtos.ts  assets.module.ts  assets.service.ts
src/auth/: auth.guard.ts  auth.middleware.ts  protected.decorator.ts
src/aviation/: aviation.controller.ts  aviation.dtos.ts  aviation.models.ts  aviation.module.ts  aviation.service.ts  routing.service.ts  utils.ts
src/client/lib/engine/: edge.ts  engine.ts  entity.ts  node.ts  renderEngine.ts  utils.ts
src/client/routes/: index.svelte
src/db/: db.module.ts  db.service.ts
src/org/: org.controller.ts  org.dtos.ts  org.models.ts  org.module.ts  org.service.ts
src/orgs/: orgs.controller.ts  orgs.dtos.ts  orgs.models.ts  orgs.module.ts  orgs.service.ts
src/user/: user.controller.ts  user.dtos.ts  user.module.ts  user.service.ts
src/users/: users.controller.ts  users.dtos.ts  users.models.ts  users.module.ts  users.service.ts
src/users/dtos/: public.user.dto.ts
src/utils/: utils.ts
src/utils/decorators/: user.decorator.ts
src/utils/interceptors/: logging.interceptor.ts
